spacing fix

--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ body {
 
 .full-page {
     width: 900px;
-    margin: 50px auto;
 }
 
 .header {
@@ -60,9 +59,9 @@ body {
     grid-column: 3 / 5;
     grid-row: 1 / 3 ;
     box-shadow: 
-    0px 10px 20px hsl(234, 12%, 34%, 0.1),  /* Lower part shadow */
-    -10px 5px 10px hsl(229, 6%, 66%, 0.05), /* Left part shadow with 70% opacity */
-    10px 5px 10px hsl(229, 6%, 66%, 0.05);  /* Right part shadow with 70% opacity */
+        0px 10px 20px hsl(234, 12%, 34%, 0.1),  /* Lower part shadow */
+        -10px 5px 10px hsl(229, 6%, 66%, 0.05), /* Left part shadow with 70% opacity */
+        10px 5px 10px hsl(229, 6%, 66%, 0.05);  /* Right part shadow with 70% opacity */
 }
 
 .left-card {
@@ -73,9 +72,9 @@ body {
     grid-column: 1 / 3;
     grid-row: 2 / 4 ;
     box-shadow: 
-    0px 10px 20px hsl(234, 12%, 34%, 0.1),  /* Lower part shadow */
-    -10px 5px 10px hsl(229, 6%, 66%, 0.05), /* Left part shadow with 70% opacity */
-    10px 5px 10px hsl(229, 6%, 66%, 0.05);  /* Right part shadow with 70% opacity */
+        0px 10px 20px hsl(234, 12%, 34%, 0.1),  /* Lower part shadow */
+        -10px 5px 10px hsl(229, 6%, 66%, 0.05), /* Left part shadow with 70% opacity */
+        10px 5px 10px hsl(229, 6%, 66%, 0.05);  /* Right part shadow with 70% opacity */
 }
 
 .right-card {
@@ -86,9 +85,9 @@ body {
     grid-column: 5 / 7;
     grid-row: 2 / 4 ;
     box-shadow: 
-    0px 10px 20px hsl(234, 12%, 34%, 0.1),  /* Lower part shadow */
-    -10px 5px 10px hsl(229, 6%, 66%, 0.05), /* Left part shadow with 70% opacity */
-    10px 5px 10px hsl(229, 6%, 66%, 0.05);  /* Right part shadow with 70% opacity */
+        0px 10px 20px hsl(234, 12%, 34%, 0.1),  /* Lower part shadow */
+        -10px 5px 10px hsl(229, 6%, 66%, 0.05), /* Left part shadow with 70% opacity */
+        10px 5px 10px hsl(229, 6%, 66%, 0.05);  /* Right part shadow with 70% opacity */
 }
 
 
@@ -128,6 +127,7 @@ div h4 {
     body {
         min-height: 1000px;
     }
+
     .header {
         padding: 20px auto;
     }
@@ -174,6 +174,4 @@ div h4 {
         grid-column: 1  / 7;
         grid-row: 4 / 5 ;
     }
-
-
 }
